fix(cmake_builder): remove DBus option for single instance

--- a/cmake_builder/CMakeLists.txt
+++ b/cmake_builder/CMakeLists.txt
@@ -22,12 +22,8 @@
 
 lcb_define_target("linphoneqt" "linphone" "ms2plugins")
 
-lcb_blacklist_dependencies("libxsd" "soci") # linphone do not need them for the moment
+lcb_blacklist_dependencies("libxsd" "soci") # linphone do not need them for the moment.
 
 if(NOT WIN32 AND NOT APPLE)
-	lcb_blacklist_dependencies("turbo-jpeg") # turbo-jpeg is already provided by Qt5 so do not build it
-endif()
-
-if(UNIX AND NOT APPLE)
-	lcb_add_option("DBus" "Enable handling of single application instance via DBus." OFF)
+	lcb_blacklist_dependencies("turbo-jpeg") # turbo-jpeg is already provided by Qt5 so do not build it.
 endif()
