feat(app): rename easily app with config.h (not deal with packages and executables)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,7 +25,7 @@ project(linphoneqt VERSION 4.1.1)
 
 set(APP_LIBRARY app-library)
 
-set(EXECUTABLE_NAME linphone)
+set(APPLICATION_NAME linphone)
 set(TARGET_NAME linphone-qt)
 
 set(CMAKE_CXX_STANDARD 11)
@@ -370,7 +370,7 @@ endif ()
 if (NOT WIN32)
   add_dependencies(update_translations check_qml)
 endif ()
-set_target_properties(${TARGET_NAME} PROPERTIES OUTPUT_NAME "${EXECUTABLE_NAME}")
+set_target_properties(${TARGET_NAME} PROPERTIES OUTPUT_NAME "${APPLICATION_NAME}")
 
 set(INCLUDED_DIRECTORIES "${LINPHONECXX_INCLUDE_DIRS}" "${BELCARD_INCLUDE_DIRS}" "${BCTOOLBOX_INCLUDE_DIRS}" "${MEDIASTREAMER2_INCLUDE_DIRS}" "${MINIZIP_INCLUDE_DIRS}")
 set(LIBRARIES ${BCTOOLBOX_CORE_LIBRARIES} ${BELCARD_LIBRARIES} ${LINPHONECXX_LIBRARIES} ${MINIZIP_LIBRARIES})
