--- a/cmake_builder/CMakeLists.txt
+++ b/cmake_builder/CMakeLists.txt
@@ -24,6 +24,12 @@ lcb_define_target("linphoneqt" "linphone" "ms2plugins")
 
 lcb_blacklist_dependencies("libxsd" "soci") # linphone do not need them for the moment.
 
-if(NOT WIN32 AND NOT APPLE)
+if (NOT WIN32 AND NOT APPLE)
   lcb_blacklist_dependencies("turbo-jpeg") # turbo-jpeg is already provided by Qt5 so do not build it.
-endif()
+endif ()
+
+set(EXECUTABLE_NAME linphone)
+
+string(SUBSTRING ${EXECUTABLE_NAME} 0 1 FIRST_LETTER)
+string(TOUPPER ${FIRST_LETTER} FIRST_LETTER)
+string(REGEX REPLACE "^.(.*)" "${FIRST_LETTER}\\1" APPLICATION_NAME "${EXECUTABLE_NAME}")
