--- a/cmake_builder/linphone_package/CMakeLists.txt
+++ b/cmake_builder/linphone_package/CMakeLists.txt
@@ -298,8 +298,8 @@ if (WIN32)
   set(CPACK_GENERATOR "NSIS")
   set(CPACK_PACKAGE_ICON "${CMAKE_CURRENT_SOURCE_DIR}\\\\linphone-banner.bmp")
   set(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${LINPHONE_GIT_REVISION}-win32")
-  set(CPACK_NSIS_MUI_ICON "${LINPHONE_DESKTOP_DIR}/assets/${EXECUTABLE_NAME}.ico")
-  set(CPACK_NSIS_MUI_UNIICON "${LINPHONE_DESKTOP_DIR}/assets/${EXECUTABLE_NAME}.ico")
+  set(CPACK_NSIS_MUI_ICON "${LINPHONE_DESKTOP_DIR}/assets/icon.ico")
+  set(CPACK_NSIS_MUI_UNIICON "${LINPHONE_DESKTOP_DIR}/assets/icon.ico")
   set(CPACK_NSIS_DISPLAY_NAME "${APPLICATION_NAME}")
   if (LINPHONE_MICRO_VERSION)
     set(CPACK_NSIS_PACKAGE_NAME "${APPLICATION_NAME} ${LINPHONE_MAJOR_VERSION}.${LINPHONE_MINOR_VERSION}.${LINPHONE_MICRO_VERSION}")
