fix(CMakeLists.txt): remove first letter app name macro

--- a/cmake_builder/CMakeLists.txt
+++ b/cmake_builder/CMakeLists.txt
@@ -29,7 +29,4 @@ if (NOT WIN32 AND NOT APPLE)
 endif ()
 
 set(EXECUTABLE_NAME linphone)
-
-string(SUBSTRING ${EXECUTABLE_NAME} 0 1 FIRST_LETTER)
-string(TOUPPER ${FIRST_LETTER} FIRST_LETTER)
-string(REGEX REPLACE "^.(.*)" "${FIRST_LETTER}\\1" APPLICATION_NAME "${EXECUTABLE_NAME}")
+set(APPLICATION_NAME Linphone)
