--- a/cmake_builder/linphone_package/macos/packaging.cmake.in
+++ b/cmake_builder/linphone_package/macos/packaging.cmake.in
@@ -1,5 +1,5 @@
 ############################################################################
-# MacPackaging.cmake
+# packaging.cmake
 # Copyright (C) 2017-2018  Belledonne Communications, Grenoble France
 #
 ############################################################################
