--- a/cmake_builder/linphone_package/windows/packaging.cmake.in
+++ b/cmake_builder/linphone_package/windows/packaging.cmake.in
@@ -1,5 +1,5 @@
 ############################################################################
-# WindowsPackaging.cmake
+# packaging.cmake
 # Copyright (C) 2014-2018  Belledonne Communications, Grenoble France
 #
 ############################################################################
